Changes for 3.2.0beta1

New features:
A.F.I...S. [ZBXNEXT-1262] added support of nested host groups (Gunars, Ivo, Oleg, Sasha, wiper)
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, Georgian, German, Italian, Japanese, Korean, Polish, Portuguese (Brazil), Russian, Slovak, Spanish, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)
........S. [ZBXNEXT-1791] enabled evaluation of nodata() and time-based functions for not supported items in trigger expressions and calculated items (Andris, wiper)

Bug fixes:
.......P.. [ZBX-11109] fixed processing of parameter HousekeepingFrequency=0 in proxy (Sergejs)
...G...PS. [ZBX-11105] fixed compiler warnings regarding unused function parameters (Sandis)
........S. [ZBX-11099] reduced configuration cache lock time after host maintenance ends (wiper)

--------------------------------------------------------------------------------
Changes for 3.2.0alpha2

New features:
A.F.I...S. [ZBXNEXT-3201] added history of events in Monitoring->Problems view, improved event.get() and problem.get() methods (Sasha)
..F....... [ZBXNEXT-3201] dropped Monitoring->Events view (Sasha)
A.F.I...S. [ZBXNEXT-104] implemented ability to manually close problems (Gunars, Ivo, wiper)
..F....... [ZBXNEXT-3358] added a beautiful favorites icon (Pavel)

Bug fixes:
....I....T [ZBX-10476] extended 'Template OS Windows' template by 'service.discovery' LLD (Sergejs)
........S. [ZBX-9413] fixed disabled hosts linking to a maintenance (Sergejs)
...G...PS. [ZBX-11100] fixed minor bugs and use of magic numbers in IP range parsers (Sergejs)
........S. [ZBX-11098] corrected log messages about completion of the trend data synchronization (Sergejs)
........S. [ZBX-11072] fixed problem with string truncation for IBM DB2 databases which contain the char '\r' (Sergejs)
....I..... [ZBX-11081] fixed compilation error with curl library (Sergejs)