@@ -76,12 +76,14 @@ ROW   |6      |Virtual machines|0       |0    |
 ROW   |7      |Hypervisors     |0       |0    |
 
 TABLE |group_prototype
-FIELDS|group_prototypeid|hostid|name                |groupid|templateid|
-ROW   |1                |10090 |{#HV.NAME}          |NULL   |NULL      |
-ROW   |2                |10090 |                    |6      |NULL      |
-ROW   |4                |10092 |                    |7      |NULL      |
-ROW   |6                |10090 |{#CLUSTER.NAME} (vm)|NULL   |NULL      |
-ROW   |7                |10092 |{#CLUSTER.NAME}     |NULL   |NULL      |
+FIELDS|group_prototypeid|hostid|name                   |groupid|templateid|
+ROW   |1                |10090 |{#HV.NAME}             |NULL   |NULL      |
+ROW   |2                |10090 |                       |6      |NULL      |
+ROW   |4                |10092 |                       |7      |NULL      |
+ROW   |6                |10090 |{#CLUSTER.NAME} (vm)   |NULL   |NULL      |
+ROW   |7                |10092 |{#CLUSTER.NAME}        |NULL   |NULL      |
+ROW   |13               |10092 |{#DATACENTER.NAME}     |NULL   |NULL      |
+ROW   |15               |10090 |{#DATACENTER.NAME} (vm)|NULL   |NULL      |
 
 TABLE |screens
 FIELDS|screenid|name                |hsize|vsize|templateid|userid|private|
@@ -877,6 +879,8 @@ ROW   |23659 |3   |                 |                                           
 ROW   |23660 |3   |                 |                                                           |10089 |CPU ready                                                        |vmware.vm.cpu.ready[{$URL},{HOST.HOST}]                                        |60   |90     |365   |0     |3         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |Percentage of time that the virtual machine was ready, but could not get scheduled to run on the physical CPU. CPU ready time is dependent on the number of virtual machines on the host and their CPU loads.                                                                                                                                                                                                                             |0             |30      |0                  |0                  |                  |0       |
 ROW   |23661 |5   |                 |                                                           |10047 |Zabbix value cache operating mode                                |zabbix[vcache,cache,mode]                                                      |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |15        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23663 |5   |                 |                                                           |10047 |Zabbix $4 $2 processes, in %                                     |zabbix[process,task manager,avg,busy]                                          |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |25330 |3   |                 |                                                           |10089 |Datacenter name                                                  |vmware.vm.datacenter.name[{$URL},{HOST.HOST}]                                  |60   |90     |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |Datacenter name of the guest VM.                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |25365 |3   |                 |                                                           |10091 |Datacenter name                                                  |vmware.hv.datacenter.name[{$URL},{HOST.HOST}]                                  |60   |90     |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |Datacenter name of the hypervisor.                                                                                                                                                                                                                                                                                                                                                                                                        |0             |30      |0                  |0                  |                  |0       |
 ROW   |10020 |0   |                 |                                                           |10001 |Agent ping                                                       |agent.ping                                                                     |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22232     |10        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |The agent always returns 1 for this item. It could be used in combination with nodata() for availability check.                                                                                                                                                                                                                                                                                                                           |0             |0       |0                  |0                  |                  |0       |
 ROW   |10059 |0   |                 |                                                           |10001 |Version of zabbix_agent(d) running                               |agent.version                                                                  |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22231     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |0       |0                  |0                  |                  |0       |
 ROW   |22715 |4   |{$SNMP_COMMUNITY}|SNMPv2-MIB::sysContact.0                                   |10066 |Device contact details                                           |sysContact                                                                     |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22713     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |The textual identification of the contact person for this managed node, together with information on how to contact this person.  If no contact information is known, the value is the zero-length string.                                                                                                                                                                                                                                |23            |0       |0                  |0                  |                  |0       |
@@ -3077,6 +3081,8 @@ ROW   |5883     |179          |23661 |
 ROW   |5884     |345          |23662 |
 ROW   |5885     |179          |23663 |
 ROW   |5886     |345          |23664 |
+ROW   |5887     |412          |25330 |
+ROW   |5888     |418          |25365 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue                              |
